--- a/rolling/linux-uksm-git/PKGBUILD
+++ b/rolling/linux-uksm-git/PKGBUILD
@@ -49,8 +49,8 @@ pkgbase=linux-uksm-git
 # pkgname=('linux-uksm-git' 'linux-uksm-git-headers' 'linux-uksm-git-docs')
 _major=5.15
 _srcname=linux
-pkgver=5.14.20.r21631.g3876336b576f
-pkgrel=3
+pkgver=5.15.4.r24636.g5a45115d0c04
+pkgrel=1
 pkgdesc='Linux UKSM'
 arch=('x86_64')
 url="https://github.com/dolohow/uksm"
@@ -70,13 +70,11 @@ _compiler_patch="0001-cpu-${_major}-merge-graysky-s-patchset.patch"
 source=("git://git.kernel.org/pub/scm/linux/kernel/git/stable/${_srcname}.git#branch=linux-rolling-stable"
         "${_lucjanpath}/${_uksm_path}/${_uksm_patch}"
         "${_lucjanpath}/${_compiler_path}/${_compiler_patch}"
-        "${_lucjanpath}/arch-patches-v2-sep/0001-ZEN-Add-sysctl-and-CONFIG-to-disallow-unprivileged-C.patch"
-        "${_lucjanpath}/arch-patches-v2-sep/0002-staging-r8188eu-Fix-breakage-introduced-when-5G-code.patch"
-        "${_lucjanpath}/arch-patches-v2-sep/0003-PCI-MSI-Deal-with-devices-lying-about-their-MSI-mask.patch"
-        "${_lucjanpath}/arch-patches-v2-sep/0004-PCI-Add-MSI-masking-quirk-for-Nvidia-ION-AHCI.patch"
-        "${_lucjanpath}/arch-patches-v2-sep/0005-PCI-Add-more-NVIDIA-controllers-to-the-MSI-masking-q.patch"
-        "${_lucjanpath}/arch-patches-v2-sep/0006-drm-amd-pm-avoid-duplicate-powergate-ungate-setting.patch"
-        "${_lucjanpath}/arch-patches-v2-sep/0007-iommu-intel-do-deep-dma-unmapping-to-avoid-kernel-fl.patch"
+        "${_lucjanpath}/arch-patches-v3-sep/0001-ZEN-Add-sysctl-and-CONFIG-to-disallow-unprivileged-C.patch"
+        "${_lucjanpath}/arch-patches-v3-sep/0002-staging-r8188eu-Fix-breakage-introduced-when-5G-code.patch"
+        "${_lucjanpath}/arch-patches-v3-sep/0003-PCI-Add-more-NVIDIA-controllers-to-the-MSI-masking-q.patch"
+        "${_lucjanpath}/arch-patches-v3-sep/0004-drm-amd-pm-avoid-duplicate-powergate-ungate-setting.patch"
+        "${_lucjanpath}/arch-patches-v3-sep/0005-iommu-intel-do-deep-dma-unmapping-to-avoid-kernel-fl.patch"
          # the main kernel config files
         'config')
 
@@ -325,11 +323,9 @@ done
 sha512sums=('SKIP'
             '4c901fe38e197b0397702ec46329fac6cdd5b7ff6e2601f76f0cbabcf452581936c58028c3a93471782541ad3045b10d1030fad4b25121f35d091495d17fd308'
             '53fa9b8a6fa451a7d57846d261f9af2de24e6442d2f318dfef899580d85e9cc54fa17267803a4f064eecab8ba3739062bfdf185de0afe119a1c86fe71cf3c711'
-            '24a50c673932f61746b75b7997c424dd4a7ee775f7c91b6264c6f2a7ddfa2d32d5a06e448fd0249c1a2e002f92df3ea3f06e8737b300592d7d8ca1709b4a8b5f'
-            'e59c9072a017efabd5e3895321d3f3f865a2647a1bec5f7ab20194d39a9dd3aadb512c3272b983fdf84e9da7b14a89a9e0c304d3fc9cf915caf549b555389ab3'
-            '0417ec25d8fdb6434e27fa0ad10e76daa4eb8b994755d853596221dc7e3422a8ec6eba93d1e487d25bc5d8c15efcd7763a15706dc0af940eb935666bd9bddc88'
-            '39426042c3680d21e1383920dea959e7d6b5662b60e53ea909168ec816850b7ddeee4ecc4db9d72eff834282364917a2bbc14b89fbb2c9872e9198010efa1fec'
-            'dee07b06dafbf4cb5335cb435b4274d78d7304d62bc514f4f51099371f5e1735c0c42afddb65d6ebadf87d52a13cf3629e072333dc5a86dcffd48fccc641744b'
-            '2c5c7c775747263def81b0d48a7f16c6e0f9055fd11e4bc990517ff36a4b550073e9b05fe089eaaeb668045d5503ccd5c96c00c463b5d60fd238da05dd436e81'
-            'ca71539acefa8a4404366446750f4bdada63c909222a4c87eb982be01bf6d78d1ba8590170330e2f8e1f45c18d56e187240ee59d6d7c4c2562afff859edf0b33'
+            'c9491cae2327be0c06c38c0b2c1102b73f71247188b6890248b28a66cdd35a7cbe54c70428d592ea1a63261420116a1c44a2732cdb1274b6939d402c8f2f1699'
+            '5813ab217fd2f652eed6c7de21fef46f29e431cffa34a30a04dc36a31f1679d85823231a6a3843d00a524beb38b9e5fffb207cf16b47b30ddfba2ac8d5f4f88d'
+            '9731c3e9e8de6272e1969c2bc545c386482216dcba0a133bdc4971098da1379b290d01230886c6a0e89cef1cb5dba17825c70fbaa2085ad053d167b351546ece'
+            '16926270cfe0dd575bc25240380cb77aca4f63230cf6040ea32e10a9a6b610ad1acc16b5a66c653cc553b0f031b0ad7ca8c3b2d711f736b2034b2b1e040efb67'
+            '42f139d8947b26c5455a95008723b05b5bb342cd4211a8f032c9f0551d72c30348c20cb04d149aca7a1ffac0b6be4e6709c64c3347984571c4d0d2684327fac3'
             '1c0547916575bb78102a828cb53c5c412d7274ae44a6b97abbb86b29cb1ea3cc9c8b2f35025366e43c8c5918e0d0ee84964df8fec5df41f3ec2b11ec296b12ec')
